889 - Handle workflow deserialization in include null values in parameters